Pregunta y respuestas funcionales

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="header">
             <h1 class="header__name-quiz">BIZARRAP SESSIONS QUIZ</h1>
-            <p class="header__info black">NIVEL FACIL</p>
+            <p class="header__info black"></p>
             <p class="header__info">SCORE: 0</p>
         </div>
     </header>
@@ -25,7 +25,7 @@
         <div class="progressbar-grey">
             <div class="progressbar-color" id="progressbar"></div>
         </div>
-        <p class="lyrics">Cancion</p>
+        <p class="lyrics" id="lyrics">Cancion</p>
     </div>
     <div class="cont-answer">
         <div class="cont-answer__answer answer1">
