--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <title>BZRP QUIZ</title>
 </head>
 
@@ -21,24 +23,39 @@
             <p class="header__info" id="score">SCORE: </p>
         </div>
     </header>
-    <div class="contenedor-question">
-        <div class="progressbar-grey">
-            <div class="progressbar-color" id="progressbar"></div>
+    <div class="start" id="start">
+        <a href=""><img src="biza.png" alt="Cara de BIZARRAP"></a>
+        <div class="button-startgame black" onclick="startGame()">
+            <p> START </p>
         </div>
-        <p class="lyrics" id="lyrics">Cancion</p>
     </div>
-    <div class="cont-answer">
-        <div class="cont-answer__answer" id="cont-answer1" onclick="validationAnswer(1)">
-            <p id="answer1">Respuesta correcta</p>
+    <div class="game" id="game">
+        <div class="contenedor-question">
+            <div class="progressbar-grey">
+                <div class="progressbar-color" id="progressbar"></div>
+            </div>
+            <p class="lyrics" id="lyrics">Cancion</p>
         </div>
-        <div class="cont-answer__answer" id="cont-answer2"  onclick="validationAnswer(2)">
-            <p id="answer2">Respuesta</p>
+        <div class="cont-answer">
+            <div class="cont-answer__answer" id="cont-answer1" onclick="validationAnswer(1)">
+                <p id="answer1">Respuesta correcta</p>
+            </div>
+            <div class="cont-answer__answer" id="cont-answer2" onclick="validationAnswer(2)">
+                <p id="answer2">Respuesta</p>
+            </div>
+            <div class="cont-answer__answer" id="cont-answer3" onclick="validationAnswer(3)">
+                <p id="answer3">Respuesta incorrecta</p>
+            </div>
+            <div class="cont-answer__answer" id="cont-answer4" onclick="validationAnswer(4)">
+                <p id="answer4">Respuesta</p>
+            </div>
         </div>
-        <div class="cont-answer__answer" id="cont-answer3"  onclick="validationAnswer(3)">
-            <p id="answer3">Respuesta incorrecta</p>
-        </div>
-        <div class="cont-answer__answer" id="cont-answer4"  onclick="validationAnswer(4)">
-            <p id="answer4">Respuesta</p>
+    </div>
+    <div class="gameOver" id="gameOver">
+        <h3 class="gameover">GAME OVER</h3>
+        <p class="score" id="results">SCORE:</p>
+        <div class="button-retry black" onclick="startGame()">
+            <p>VOLVER A JUGAR</p>
         </div>
     </div>
     <footer>
@@ -46,6 +63,7 @@
         <a href="http://www.github.com/MatiasArias">Matias Arias</a>
     </footer>
     <input type="file" id="sessions" hidden="true" value="sessions.csv">
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
